[UIMA-839] More fixes to get startbroker working on windows.  more to do...
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk/uima-as@634704 13f79535-47bb-0310-9956-ffa450edef68