@@ -22,13 +22,14 @@ if exist "%HOME%\activemqrc_pre.bat" call "%HOME%\activemqrc_pre.bat"
 if "%OS%"=="Windows_NT" @setlocal
 
 rem %~dp0 is expanded pathname of the current script under NT
-set DEFAULT_ACTIVEMQ_HOME=%~dp0..\apache-activemq-5.0.0
+set DEFAULT_ACTIVEMQ_HOME=%~dp0..
 
 if "%ACTIVEMQ_HOME%"=="" set ACTIVEMQ_HOME=%DEFAULT_ACTIVEMQ_HOME%
 set DEFAULT_ACTIVEMQ_HOME=
 
 rem Slurp the command line arguments. This loop allows for an unlimited number
 rem of arguments (up to the command line limit, anyway).
+
 set ACTIVEMQ_CMD_LINE_ARGS=%1
 if ""%1""=="""" goto doneStart
 shift
@@ -37,6 +38,7 @@ if ""%1""=="""" goto doneStart
 set ACTIVEMQ_CMD_LINE_ARGS=%ACTIVEMQ_CMD_LINE_ARGS% %1
 shift
 goto setupArgs
+
 rem This label provides a place for the argument list loop to break out 
 rem and for NT handling to skip to.
 
@@ -83,9 +85,7 @@ echo Warning: JAVA_HOME environment variable is not set.
 echo.
 
 :runAnt
-
 if "%ACTIVEMQ_BASE%" == "" set ACTIVEMQ_BASE=%ACTIVEMQ_HOME%
-
 if "%ACTIVEMQ_OPTS%" == "" set ACTIVEMQ_OPTS=-Xmx512M -Dorg.apache.activemq.UseDedicatedTaskRunner=true -Dderby.system.home="%ACTIVEMQ_BASE%\data" -Dderby.storage.fileSyncTransactionLog=true
 
 if "%SUNJMX%" == "" set SUNJMX=-Dcom.sun.management.jmxremote
@@ -93,22 +93,20 @@ REM set SUNJMX=-Dcom.sun.management.jmxremote.port=1616 -Dcom.sun.management.jmx
 
 if "%SSL_OPTS%" == "" set SSL_OPTS=-Djavax.net.ssl.keyStorePassword=password -Djavax.net.ssl.trustStorePassword=password -Djavax.net.ssl.keyStore="%ACTIVEMQ_BASE%/conf/broker.ks" -Djavax.net.ssl.trustStore="%ACTIVEMQ_BASE%/conf/broker.ts"
 
+if "%ACTIVEMQ_CMD_LINE_ARGS%" == "" set ACTIVEMQ_CMD_LINE_ARGS=--help
+
 REM Uncomment to enable YourKit profiling
-REM SET ACTIVEMQ_DEBUG_OPTS="-agentlib:yjpagent"
+REM SET ACTIVEMQ_DEBUG_OPTS="-Xrunyjpagent"
 
 REM Uncomment to enable remote debugging
 REM SET ACTIVEMQ_DEBUG_OPTS=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
 
 REM Setup ActiveMQ Classpath. Default is the conf directory.
-set ACTIVEMQ_CLASSPATH=%ACTIVEMQ_BASE%/conf;%ACTIVEMQ_CLASSPATH%
+set ACTIVEMQ_CLASSPATH=%ACTIVEMQ_HOME%/conf;%ACTIVEMQ_CLASSPATH%
 
-REM Set the task to run
-set ACTIVEMQ_TASK="start"
-
-"%_JAVACMD%" %SUNJMX% %ACTIVEMQ_DEBUG_OPTS% %ACTIVEMQ_OPTS% %SSL_OPTS% -Dactivemq.classpath="%ACTIVEMQ_CLASSPATH%" -Dactivemq.home="%ACTIVEMQ_HOME%" -Dactivemq.base="%ACTIVEMQ_BASE%" -jar "%ACTIVEMQ_HOME%/bin/run.jar" %ACTIVEMQ_TASK% %ACTIVEMQ_CMD_LINE_ARGS%
+"%_JAVACMD%" %ACTIVEMQ_DEBUG_OPTS% %ACTIVEMQ_OPTS% -Djava.ext.dirs="%JAVA_EXT_DIRS%" -Dactivemq.classpath="%ACTIVEMQ_CLASSPATH%" -jar "%ACTIVEMQ_HOME%/bin/run.jar" %ACTIVEMQ_CMD_LINE_ARGS%
 
 goto end
-
 
 :end
 set _JAVACMD=
